<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

  <modelVersion>4.0.0</modelVersion>

  <groupId>ai.platon.template</groupId>
  <artifactId>pulsar-java-17-template</artifactId>
  <packaging>jar</packaging>
  <version>0.0.1-SNAPSHOT</version>

  <name>PulsarR Template</name>
  <description>A template project to use PulsarR as a library</description>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <pulsar.version>1.10.4-SNAPSHOT</pulsar.version>
  </properties>

  <dependencies>
    <dependency>
      <groupId>ai.platon.pulsar</groupId>
      <artifactId>pulsar-all</artifactId>
      <version>${pulsar.version}</version>
    </dependency>
  </dependencies>

  <build>
    <defaultGoal>package</defaultGoal>

    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.10.1</version>
        <configuration>
          <source>17</source>
          <target>17</target>
          <release>17</release>
        </configuration>
      </plugin>

    </plugins>
  </build>

</project>
